// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin/categories form 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "loading": true,
        "method": "get",
        "params": Object {
          "limit": 500,
        },
        "url": "/api/admin/categories",
      },
    ],
    Array [
      Object {
        "loading": true,
        "method": "get",
        "url": "/api/admin/categories/defaults",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;

exports[`admin/categories form 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "loading": true,
        "method": "get",
        "params": Object {
          "limit": 500,
        },
        "url": "/api/admin/categories",
      },
    ],
    Array [
      Object {
        "loading": true,
        "method": "get",
        "url": "/api/admin/categories/defaults",
      },
    ],
    Array [
      Object {
        "data": Object {
          "description": undefined,
          "id": undefined,
          "name": "测试分类",
          "parentId": 0,
          "sort": 50,
        },
        "loading": true,
        "method": "POST",
        "url": "/api/admin/categories",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;
